--- a/ChroniquesOubliees/co.htm
+++ b/ChroniquesOubliees/co.htm
@@ -147,12 +147,11 @@
                 <tr>
                   <td class="textfat">ÉTAT</td>
                   <td class="boxinputlight" COLSPAN="5">
-                    <input type="radio" name="attr_ETATDE" value="20" checked >Normal (d20)</input>
-                    &nbsp;
-                    <input type="radio" name="attr_ETATDE" value="12" >Affaibli (d12)</input>
+                    <input type="radio" name="attr_ETATDE" value="20" checked/>Normal (d20)
+                    <input type="radio" name="attr_ETATDE" value="12"/>Affaibli (d12)
                   </td>
                 </tr>
-              </table class="tabsep">
+              </table>
             </td> <!-- FIN Caracs -->
             <td  style="width:100%;"> <!-- Combat + PV + défense -->
               <table>
@@ -667,7 +666,6 @@
               <span class="textbase">Bourse&nbsp;:</span>&nbsp;
               <input type="text" style="width:320px;" name="attr_BOURSE" placeholder="Rien ? C'est la pauvreté !" />
             </div>
-            </table>
             <fieldset class="repeating_equipement">
               <div class="boxvoie">
                 <input type="text" style="width:310px;" name="attr_equip-nom" title="Équipement" />
@@ -863,15 +861,16 @@
                 <option value="8">d8</option>
                 <option value="10">d10</option>
                 <option value="12">d12</option>
+              </select>
                 +<input type="number" style="width:32px;" name="attr_armedm" value="0" title="Bonus de dommage" />
             </td>
+            <td class="boxinputleft" style="min-width:50px;">
+              <input type="text" name="attr_armeportee" placeholder="Portée" title="Portée" />
+            </td>
+            <td class="boxinputleft" style="width:100%;">
+              <textarea name="attr_armespec" spellcheck="false" placeholder="Notes, capacités spéciales, effet ..." title="Notes, capacités spéciales, effet ..."></textarea>
+            </td>
           </tr>
-          <td class="boxinputleft" style="min-width:50px;">
-            <input type="text" name="attr_armeportee" placeholder="Portée" title="Portée" />
-          </td>
-          <td class="boxinputleft" style="width:100%;">
-            <textarea name="attr_armespec" spellcheck="false" placeholder="Notes, capacités spéciales, effet ..." title="Notes, capacités spéciales, effet ..."></textarea>
-          </td>
         </table>
       </fieldset>
     </div>
