Fixed header name for new weapons section

--- a/AD&D 2E Revised/2ESheet.html
+++ b/AD&D 2E Revised/2ESheet.html
@@ -1990,7 +1990,7 @@
                                     </tr>
                                     <tr>
                                             <td class="sheet-centering"><input type='checkbox' name='attr_strbonus-po-d1' title="@{repeating_weapons-damage_$X_strbonus-po-d1}" value='1' checked /><span></span></td>
-                                            <td class="sheet-centering"><input type='checkbox' name='attr_dexbonus-po-d1' title="@{repeating_weapons-damage_$X_dexbonus-po-d1}" value='1' checked /><span></span></td>
+                                            <td class="sheet-centering"><input type='checkbox' name='attr_dexbonus-po-d1' title="@{repeating_weapons-damage_$X_dexbonus-po-d1}" value='1' /><span></span></td>
                                             <td><input type="text" name="attr_weaponname-po-d1" title="@{repeating_weapons-damage_$X_weaponname-po-d1}" class="sheet-middle"></td>
                                             <td class="sheet-centering"><input type="checkbox" name="attr_specialist-damage-po-d1" title="@{repeating_weapons-damage_$X_specialist-damage-po-d1}" value="2"/><span></span></td>
                                             <td class="sheet-centering"><input type="checkbox" name="attr_mastery-damage-po-d1" title="@{repeating_weapons-damage_$X_mastery-damage-po-d1}" value="3"/><span></span></td>
@@ -2188,7 +2188,7 @@
                     <table style='border-collapse: collapse; border-spacing: 0;'>
                             <tr>
                                     <th class="sheet-default-header" rowspan="2" title="Strength damage adjustment">Str</th>
-                                    <th class="sheet-default-header" rowspan="2" title="Dexterity missile attack adjustment as damage adjustment">Str</th>
+                                    <th class="sheet-default-header" rowspan="2" title="Dexterity missile attack adjustment as damage adjustment">Dex</th>
                                     <th class="sheet-default-header" rowspan="2" title="Ammunition name">Ammo</th>
                                     <th class="sheet-default-header" colspan="2" title="Point Blank damage mod.">Point Blank</th>
                                     <th class="sheet-default-header" rowspan="2" title="Damage adjustment">Damage<br>Adj.</th>
