Added better titles for elements and a bit of extra styling

--- a/AD&D 2E Revised/2ESheet.html
+++ b/AD&D 2E Revised/2ESheet.html
@@ -1451,7 +1451,7 @@
             <th class="sheet-default-header" rowspan="2" title="Strength attack adjustment">Str</th>
             <th class="sheet-default-header" rowspan="2" title="Weapon name">Weapon</th>
             <th class="sheet-default-header" rowspan="2" title="Nonproficient with weapon">Nonprof</th>
-            <th class="sheet-default-header" rowspan="2" title="Specialist">Spec</th>
+            <th class="sheet-default-header" rowspan="2" title="Specialist: +1">Spec</th>
             <th class="sheet-default-header" rowspan="2" title="Number of attacks per round"># of<br>Attack</th>
             <th class="sheet-default-header" rowspan="2" title="Attack adjustment">Attack<br>Adj.</th>
             <th class="sheet-default-header" rowspan="2" colspan="2" title="To Hit Armor Class 0">THAC0</th>
@@ -1534,7 +1534,7 @@
     <tr>
             <th class="sheet-default-header" title="Strength damage adjustment">Str</th>
             <th class="sheet-default-header" title="Weapon name">Weapon</th>
-            <th class="sheet-default-header" title="Specialist">Spec</th>
+            <th class="sheet-default-header" title="Specialist: +2">Spec</th>
             <th class="sheet-default-header" title="Damage adjustment">Damage<br>Adj.</th>
             <th class="sheet-default-header" colspan="2" title="Damage Small/Medium" >Dam SM</th>
             <th class="sheet-default-header" colspan="2" title="Damage Large" >Dam L</th>
@@ -1645,7 +1645,7 @@
             <th class="sheet-default-header" rowspan="2" title="Dexterity missile attack adjustment">Dex</th>
             <th class="sheet-default-header" rowspan="2" title="Weapon name">Weapon</th>
             <th class="sheet-default-header" rowspan="2" title="Nonproficient with weapon">Nonprof</th>
-            <th class="sheet-default-header" colspan="4" title="Range modifiers">Range Mod.</th>
+            <th class="sheet-default-header sheet-centering" colspan="4" title="Range modifiers">Range Mod.</th>
             <th class="sheet-default-header" rowspan="2" title="Number of attacks per round"># of<br>Attacks</th>
             <th class="sheet-default-header" rowspan="2" title="Attack adjustment">Attack<br>Adj.</th>
             <th class="sheet-default-header" rowspan="2" colspan="2" title="To Hit Armor Class 0">THAC0</th>
@@ -1877,11 +1877,11 @@
                                     <td><input type="text" name="attr_weaponname-po-a1" title="@{weaponname-po-a1}" class="sheet-middle"></td>
                                     <td>
                                             <select name="attr_prof-level-po-a1" title="@{prof-level-po-a1}" class="sheet-table-dynamic">
-                                                    <option value="@{nonprof-penalty-po}" >Nonproficient</option>
-                                                    <option value="floor(@{nonprof-penalty-po}/2)">Familiarity</option>
-                                                    <option value="0" selected="selected">Proficient</option>
-                                                    <option value="1">Specialist</option>
-                                                    <option value="3">Mastery</option>
+                                                    <option value="@{nonprof-penalty-po}" title="Nonprofecient: @{nonprof-penalty-po}" >Nonproficient</option>
+                                                    <option value="floor(@{nonprof-penalty-po}/2)" title="Familiarity: floor(@{nonprof-penalty-po}/2)">Familiarity</option>
+                                                    <option value="0" selected="selected" title="Profeciency: 0">Proficient</option>
+                                                    <option value="1" title="Specialist: +1">Specialist</option>
+                                                    <option value="3" title="Mastery: +3">Mastery</option>
                                             </select>
                                     </td>
                                     <td><input type="text" name="attr_attacknum-po-a1" title="@{attacknum-po-a1}" class="sheet-table-dynamic"></td>
@@ -1923,11 +1923,11 @@
                                             <td><input type="text" name="attr_weaponname-po-a1" title="@{repeating_weapons_$X_weaponname-po-a1}" class="sheet-middle"></td>
                                             <td>
                                                     <select name="attr_prof-level-po-a1" title="@{repeating_weapons_$X_prof-level-po-a1}" class="sheet-table-dynamic">
-                                                            <option value="@{nonprof-penalty-po}" >Nonproficient</option>
-                                                            <option value="floor(@{nonprof-penalty-po}/2)">Familiarity</option>
-                                                            <option value="0" selected="selected">Proficient</option>
-                                                            <option value="1">Specialist</option>
-                                                            <option value="3">Mastery</option>
+                                                            <option value="@{nonprof-penalty-po}"  title="Nonprofecient: @{nonprof-penalty-po}">Nonproficient</option>
+                                                            <option value="floor(@{nonprof-penalty-po}/2)" title="Familiarity: floor(@{nonprof-penalty-po}/2)">Familiarity</option>
+                                                            <option value="0" selected="selected" title="Profeciency: 0">Proficient</option>
+                                                            <option value="1" title="Specialist: +1">Specialist</option>
+                                                            <option value="3" title="Mastery: +3">Mastery</option>
                                                     </select>
                                             </td>
                                             <td><input type="text" name="attr_attacknum-po-a1" title="@{repeating_weapons_$X_attacknum-po-a1}" class="sheet-table-dynamic"></td>
@@ -1954,10 +1954,10 @@
                     <table style='border-collapse: collapse; border-spacing: 0;'>
                             <tr>
                                     <th class="sheet-default-header" title="Strength damage adjustment">Str</th>
-                                    <th class="sheet-default-header" title="Dexterity missile attack adjustment as damage adjustment">Dex</th>
+                                    <th class="sheet-default-header" title="Dexterity missile attack adjustment as melee damage adjustment">Dex</th>
                                     <th class="sheet-default-header" title="Weapon name">Weapon</th>
-                                    <th class="sheet-default-header" title="Specialist">Spec</th>
-                                    <th class="sheet-default-header" title="Mastery">Mast</th>
+                                    <th class="sheet-default-header" title="Specialist: +2">Spec</th>
+                                    <th class="sheet-default-header" title="Mastery: +3">Mast</th>
                                     <th class="sheet-default-header" title="Damage adjustment">Damage<br>Adj.</th>
                                     <th class="sheet-default-header" colspan="2" title="Damage Small/Medium" >Dam SM</th>
                                     <th class="sheet-default-header" colspan="2" title="Damage Large" >Dam L</th>
@@ -2071,7 +2071,7 @@
                                     <th class="sheet-default-header" rowspan="2" title="Dexterity missile attack adjustment">Dex</th>
                                     <th class="sheet-default-header" rowspan="2" title="Weapon name">Weapon</th>
                                     <th class="sheet-default-header" rowspan="2" title="Proficiency level with weapon">Proficiency</th>
-                                    <th class="sheet-default-header" colspan="5" title="Range modifiers">Range Mod.</th>
+                                    <th class="sheet-default-header sheet-centering" colspan="5" title="Range modifiers">Range Mod.</th>
                                     <th class="sheet-default-header" rowspan="2" title="Number of attacks per round"># of<br>Attacks</th>
                                     <th class="sheet-default-header" rowspan="2" title="Attack adjustment">Attack<br>Adj.</th>
                                     <th class="sheet-default-header" rowspan="2" colspan="2" title="To Hit Armor Class 0">THAC0</th>
@@ -2097,11 +2097,11 @@
                                     <td><input type="text" name="attr_weaponname-po-a2" title="@{weaponname-po-a2}" class="sheet-middle">
                                     <td>
                                             <select name="attr_prof-level-po-a2" title="@{prof-level-po-a2}" class="sheet-table-dynamic">
-                                                    <option value="@{nonprof-penalty-po}" >Nonproficient</option>
-                                                    <option value="floor(@{nonprof-penalty-po}/2)">Familiarity</option>
-                                                    <option value="0" selected="selected">Proficient</option>
-                                                    <option value="1">Specialist</option>
-                                                    <option value="2">Mastery</option>
+                                                    <option value="@{nonprof-penalty-po}" title="Nonprofecient: @{nonprof-penalty-po}">Nonproficient</option>
+                                                    <option value="floor(@{nonprof-penalty-po}/2)" title="Familiarity: floor(@{nonprof-penalty-po}/2)">Familiarity</option>
+                                                    <option value="0" selected="selected" title="Profeciency: 0">Proficient</option>
+                                                    <option value="1" title="Specialist: +1">Specialist</option>
+                                                    <option value="2" title="Mastery: +2">Mastery</option>
                                             </select>
                                     </td>
                                     <td class="sheet-centering"><label><input type="checkbox" name="attr_pb-attack-po-a2" title="@{pb-attack-po-a2}" value="1"/><span></span></label></td>
@@ -2153,11 +2153,11 @@
                                             <td><input type="text" name="attr_weaponname-po-a2" title="@{repeating_weapons2_$X_weaponname-po-a2}" class="sheet-middle">
                                             <td>
                                                     <select name="attr_prof-level-po-a2" title="@{repeating_weapons2_$X_prof-level-po-a2}" class="sheet-table-dynamic">
-                                                            <option value="@{nonprof-penalty-po}" >Nonproficient</option>
-                                                            <option value="floor(@{nonprof-penalty-po}/2)">Familiarity</option>
-                                                            <option value="0" selected="selected">Proficient</option>
-                                                            <option value="1">Specialist</option>
-                                                            <option value="2">Mastery</option>
+                                                            <option value="@{nonprof-penalty-po}" title="Nonprofecient: @{nonprof-penalty-po}">Nonproficient</option>
+                                                            <option value="floor(@{nonprof-penalty-po}/2)" title="Familiarity: floor(@{nonprof-penalty-po}/2)">Familiarity</option>
+                                                            <option value="0" selected="selected" title="Profeciency: 0">Proficient</option>
+                                                            <option value="1" title="Specialist: +1">Specialist</option>
+                                                            <option value="2" title="Mastery: +2">Mastery</option>
                                                     </select>
                                             </td>
                                             <td class="sheet-centering"><label><input type="checkbox" name="attr_pb-attack-po-a2" title="@{repeating_weapons2_$X_pb-attack-po-a2}" value="1"/><span></span></label></td>
@@ -2190,15 +2190,15 @@
                                     <th class="sheet-default-header" rowspan="2" title="Strength damage adjustment">Str</th>
                                     <th class="sheet-default-header" rowspan="2" title="Dexterity missile attack adjustment as damage adjustment">Dex</th>
                                     <th class="sheet-default-header" rowspan="2" title="Ammunition name">Ammo</th>
-                                    <th class="sheet-default-header" colspan="2" title="Point Blank damage mod.">Point Blank</th>
+                                    <th class="sheet-default-header sheet-centering" colspan="2" title="Point Blank damage modifier">Point Blank</th>
                                     <th class="sheet-default-header" rowspan="2" title="Damage adjustment">Damage<br>Adj.</th>
                                     <th class="sheet-default-header" rowspan="2" colspan="2" title="Damage Small/Medium">Dam SM</th>
                                     <th class="sheet-default-header" rowspan="2" colspan="2" title="Damage Large">Dam L</th>
                                     <th class="sheet-default-header" rowspan="2" title="Amount of ammunition">Amount</th>
                             </tr>
                             <tr>
-                                    <th class="sheet-default-header">Spec</th>
-                                    <th class="sheet-default-header">Mast</th>
+                                    <th class="sheet-default-header" title="Specialist Point Blank: +2">Spec</th>
+                                    <th class="sheet-default-header" title="Specialist Point Blank: +3">Mast</th>
                             </tr>
                             <tr>
                                     <td class="sheet-centering"><label><input type='checkbox' name='attr_strbonus-po-d2' title="@{strbonus-po-d2}" value='1'/><span></span></label></td>
