--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -51,8 +51,64 @@
         </td>
     </tr>
 </table>
+<div class="sheet-nav-bar">
+    <div class="sheet-nav-child">
+        <label class="sheet-page-label">
+            <input type="radio" name="attr_page_button" class="sheet-hidden-flex sheet-page-button" value="1" />
+            <div class="sheet-page-button-back">Character Sheet</div>
+        </label>
+    </div>
+    <div class="sheet-nav-child">
+        <label class="sheet-page-label">
+            <input type="radio" name="attr_page_button" class="sheet-hidden-flex sheet-page-button" value="6" />
+            <div class="sheet-page-button-back">Moves</div>
+        </label>
+    </div>
+    <div class="sheet-nav-child">
+        <label class="sheet-page-label">
+            <input type="radio" name="attr_page_button" class="sheet-hidden-flex sheet-page-button" value="3" />
+            <div class="sheet-page-button-back">Assets</div>
+        </label>
+    </div>
+    <div class="sheet-nav-child">
+        <label class="sheet-page-label">
+            <input type="radio" name="attr_page_button" class="sheet-hidden-flex sheet-page-button" value="2" />
+            <div class="sheet-page-button-back">Progress</div>
+        </label>
+    </div>
+    <div class="sheet-nav-child">
+        <label class="sheet-page-label">
+            <input type="radio" name="attr_page_button" class="sheet-hidden-flex sheet-page-button" value="4" />
+            <div class="sheet-page-button-back">Oracles</div>
+        </label>
+    </div>
+    <div class="sheet-nav-child">
+        <label class="sheet-page-label">
+            <input type="radio" name="attr_page_button" class="sheet-hidden-flex sheet-page-button" value="5" />
+            <div class="sheet-page-button-back">Bonds</div>
+        </label>
+    </div>
+    <div class="sheet-nav-child">
+        <label class="sheet-page-label">
+            <input type="radio" name="attr_page_button" class="sheet-hidden-flex sheet-page-button" value="7" />
+            <div class="sheet-page-button-back">Sites</div>
+        </label>
+    </div>
+    <div class="sheet-nav-child">
+        <label class="sheet-page-label">
+            <input type="radio" name="attr_page_button" class="sheet-hidden-flex sheet-page-button" value="8" />
+            <div class="sheet-page-button-back">Themes & Domains</div>
+        </label>
+    </div>
+    <div class="sheet-nav-child">
+        <label class="sheet-page-label">
+            <input type="radio" name="attr_page_button" class="sheet-hidden-flex sheet-page-button" value="9" />
+            <div class="sheet-page-button-back">Delve Oracles</div>
+        </label>
+    </div>
+</div>
 <hr class="sheet-nav-top">
-<input type="radio" class="sheet-pages sheet-page1" name="attr_pagenumber" title="Page 1" value="1" checked/>
+<!-- <input type="radio" class="sheet-pages sheet-page1" name="attr_pagenumber" title="Page 1" value="1" checked/>
 <span class="sheet-page-label sheet-page-label-1">Character Sheet</span>
 
 <input type="radio" class="sheet-pages sheet-page6" name="attr_pagenumber" title="Page 6" value="6" />
@@ -77,8 +133,10 @@
 <span class="sheet-page-label sheet-page-label-8">Themes & Domains</span>
 
 <input type="radio" class="sheet-pages sheet-page9" name="attr_pagenumber" title="Page 9" value="9" />
-<span class="sheet-page-label sheet-page-label-9">Delve Oracles</span>
+<span class="sheet-page-label sheet-page-label-9">Delve Oracles</span> -->
 
+
+<input type="radio" class="sheet-pages sheet-page1 sheet-hidden-flex" name="attr_pagenumber" value="1" checked/>
 <div class="page1tab">
     <hr class="sheet-nav-bottom">
     <table>
@@ -1298,6 +1356,7 @@
     </div>
 </div>
 
+<input type="radio" class="sheet-pages sheet-page2 sheet-hidden-flex" name="attr_pagenumber" value="2" />
 <div class="page2tab">
     <hr class="sheet-nav-bottom">
     <fieldset class="repeating_progress">
@@ -1398,6 +1457,7 @@
     </fieldset>
 </div>
 
+<input type="radio" class="sheet-pages sheet-page3 sheet-hidden-flex" name="attr_pagenumber" value="3" />
 <div class="page3tab">
     <hr class="sheet-nav-bottom">
     <div class="sheet-assets">
@@ -4797,6 +4857,7 @@
     </div>
 </div>
 
+<input type="radio" class="sheet-pages sheet-page4 sheet-hidden-flex" name="attr_pagenumber" value="4" />
 <div class="page4tab">
     <hr class="sheet-nav-bottom">
     <div class="sheet-oracle-container">
@@ -7640,6 +7701,7 @@
     </div>
 </div>
 
+<input type="radio" class="sheet-pages sheet-page5 sheet-hidden-flex" name="attr_pagenumber" value="5" />
 <div class="page5tab">
     <hr class="sheet-nav-bottom">
     <fieldset class="repeating_bonds">
@@ -7669,6 +7731,7 @@
     </fieldset>
 </div>
 
+<input type="radio" class="sheet-pages sheet-page6 sheet-hidden-flex" name="attr_pagenumber" value="6" />
 <div class="page6tab">
     <hr class="sheet-nav-bottom">
     <div class="sheet-move-container">
@@ -9340,6 +9403,7 @@
     </div>
 </div>
 
+<input type="radio" class="sheet-pages sheet-page7 sheet-hidden-flex" name="attr_pagenumber" value="7" />
 <div class="page7tab">
     <hr class="sheet-nav-bottom">
     <fieldset class="repeating_sites">
@@ -9576,6 +9640,7 @@
     </fieldset>
 </div>
 
+<input type="radio" class="sheet-pages sheet-page8 sheet-hidden-flex" name="attr_pagenumber" value="8" />
 <div class="page8tab">
     <hr class="sheet-nav-bottom">
     <div class="sheet-oracle-container">
@@ -11333,6 +11398,7 @@
     </div>
 </div>
 
+<input type="radio" class="sheet-pages sheet-page9 sheet-hidden-flex" name="attr_pagenumber" value="9" />
 <div class="page9tab">
     <hr class="sheet-nav-bottom">
     <div class="sheet-oracle-container">
@@ -21242,6 +21308,12 @@ on('change:momentumBurn', function() {
             momentumBurn: 'off'
         });
     });
+});
+
+on('change:page_button', function(eventinfo) {
+  setAttrs({
+    attr_pagenumber: eventinfo.newValue
+  });
 });
 
 </script>
