added default check for character sheet page

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -54,7 +54,7 @@
 <div class="sheet-nav-bar">
     <div class="sheet-nav-child">
         <label class="sheet-page-label">
-            <input type="radio" name="attr_page_button" class="sheet-hidden-flex sheet-page-button" value="1" />
+            <input type="radio" name="attr_page_button" class="sheet-hidden-flex sheet-page-button" value="1" checked/>
             <div class="sheet-page-button-back">
                 <p class="sheet-page-button-back-text">Character Sheet</p>
             </div>
