move stuff around, fix primary weapons, add skills, add program buttons

--- a/Shadowrun4thEdition/src/html/hidden.html
+++ b/Shadowrun4thEdition/src/html/hidden.html
@@ -37,10 +37,7 @@
 <input type="hidden" name="attr_matrix_max" min="8" value="10" />
 <input type="hidden" name="attr_defense" value="6" />
 
-<input type="hidden" name="attr_acting" min="0" value="0" />
 <input type="hidden" name="attr_aeronauticsmechanic" min="0" value="0" />
-<input type="hidden" name="attr_alchemy" min="0" value="0" />
-<input type="hidden" name="attr_animalhandling" min="0" value="0" />
 <input type="hidden" name="attr_arcana" min="0" value="0" />
 <input type="hidden" name="attr_archery" min="0" value="0" />
 <input type="hidden" name="attr_armorer" min="0" value="0" />
@@ -54,7 +51,6 @@
 <input type="hidden" name="attr_banishing" min="0" value="0" />
 <input type="hidden" name="attr_binding" min="0" value="0" />
 <input type="hidden" name="attr_biotech" min="0" value="0" />
-<input type="hidden" name="attr_biotechnology" min="0" value="0" />
 <input type="hidden" name="attr_blades" min="0" value="0" />
 <input type="hidden" name="attr_chemistry" min="0" value="0" />
 <input type="hidden" name="attr_closecombat" min="0" value="0" />
@@ -69,13 +65,11 @@
 <input type="hidden" name="attr_cybertechnology" min="0" value="0" />
 <input type="hidden" name="attr_decompiling" min="0" value="0" />
 <input type="hidden" name="attr_demolitions" min="0" value="0" />
-<input type="hidden" name="attr_disenchanting" min="0" value="0" />
 <input type="hidden" name="attr_disguise" min="0" value="0" />
 <input type="hidden" name="attr_diving" min="0" value="0" />
 <input type="hidden" name="attr_electronics" min="0" value="0" />
 <input type="hidden" name="attr_electronicwarfare" min="0" value="0" />
 <input type="hidden" name="attr_enchanting" min="0" value="0" />
-<input type="hidden" name="attr_engineering" min="0" value="0" />
 <input type="hidden" name="attr_escapeartist" min="0" value="0" />
 <input type="hidden" name="attr_etiquette" min="0" value="0" />
 <input type="hidden" name="attr_exoticmelee" min="0" value="0" />
@@ -90,7 +84,6 @@
 <input type="hidden" name="attr_hacking" min="0" value="0" />
 <input type="hidden" name="attr_hardware" min="0" value="0" />
 <input type="hidden" name="attr_heavyweapons" min="0" value="0" />
-<input type="hidden" name="attr_impersonation" min="0" value="0" />
 <input type="hidden" name="attr_industrialmechanic" min="0" value="0" />
 <input type="hidden" name="attr_influence" min="0" value="0" />
 <input type="hidden" name="attr_instruction" min="0" value="0" />
@@ -128,3 +121,8 @@
 <input type="hidden" name="attr_throwingweapons" min="0" value="0" />
 <input type="hidden" name="attr_tracking" min="0" value="0" />
 <input type="hidden" name="attr_unarmedcombat" min="0" value="0" />
+
+<input type="hidden" name="attr_dodge" min="0" value="0" />
+<input type="hidden" name="attr_infiltration" min="0" value="0" />
+<input type="hidden" name="attr_shadowing" min="0" value="0" />
+<input type="hidden" name="attr_datasearch" min="0" value="0" />
