update force in npc buttons

--- a/Shadowrun4thEdition/Shadowrun4thEdition.html
+++ b/Shadowrun4thEdition/Shadowrun4thEdition.html
@@ -2762,7 +2762,7 @@
       <fieldset class="repeating_NPCspell">
         <input name="attr_flag" title="Settings toggle" type="checkbox" checked="checked"/><span class="pictos">x</span>
         <input name="attr_spell" type="hidden" value=""/><span name="attr_dice"></span>
-        <button name="roll_spell" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=@{name}}}{{base=^{base}}}{{dice=[[((@{dice})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=@{category}?{Force|}, Drain [[ceil(?{Force|}/2)+(@{drain})]]}}"><span name="attr_name"></span></button><span name="attr_spell"></span>
+        <button name="roll_spell" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=@{name}}}{{base=^{base}}}{{dice=[[((@{dice})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=@{category}, ^{force} ?{Force|}, Drain [[ceil(?{Force|}/2)+(@{drain})]]}}"><span name="attr_name"></span></button><span name="attr_spell"></span>
         <div class="settings">
           <input name="attr_category" type="hidden" value=""/>
           <h2 data-i18n="category">Category</h2>
