add to core ratings

--- a/Shadowrun4thEdition/Shadowrun4thEdition.html
+++ b/Shadowrun4thEdition/Shadowrun4thEdition.html
@@ -653,9 +653,9 @@
 					<span name="attr_armor_name" title="@{soak}"></span>
 				</button>
 				<h3 data-i18n="rating">Rating</h3>
-				<button type="roll" name="roll_armor" value="@{gm_toggle} &{template:rolls}{{header=^{armor}}}{{base=^{armor}}}{{dice=[[((@{armor_rating})+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifiers_toggle}]]}}{{edge=[[@{edge_toggle}]]}}">
-					<span name="attr_armor_rating" title="@{armor_rating}"></span>
-				</button>
+        <span name="attr_ballistic" title="@{ballistic}"></span>
+        <span>/</span>
+        <span name="attr_impact" title="@{impact}"></span>
 				<div class="armor-buttons">
 					<button type="roll" name="roll_defense" value="@{gm_toggle} &{template:rolls}{{header=^{defense}}}{{base=^{base}}}{{dice=[[((@{defense})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}" title="Defense Roll"><span class="pictos-custom" title="@{defense}">e</span></button>
 					<button type="roll" name="roll_ballistic" value="@{gm_toggle} &{template:rolls}{{header=^{ballistic}}}{{base=^{base}}}{{dice=[[((@{ballistic}+@{soak})+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifiers_toggle}]]}}{{edge=[[@{edge_toggle}]]}}"><span class="pictos-custom" title="@{ballistic}">t</span></button>
